# SR-Exam

./: package-lock.json  package.json
SRExam Diagram/: SRexamDiagram.vpp  SRexamDiagram.vpp.bak_000f  SRexamDiagram.vpp.bak_001d  UseCaseDesc.xlsx
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/schemas/: TPADesktop.graphqls
src-tauri/src/: main.rs
src/Pages/: AllocateStudentPage.tsx  ExamSchedulerPage.tsx  HomePage.tsx  LoginPage.tsx  ProfilePage.tsx  RoomTransactionPage.tsx  SubjectManagement.tsx  TransactionDetailPage.tsx  TransactionPage.tsx  UserManagementPage.tsx
src/components/: CardComponent.tsx  DetailHeaderComponent.tsx  NavbarComponent.tsx
src/models/: Room.ts  StudentDetails.ts  StudentMapping.ts  Subject.ts  TransactionForAssitant.ts  TransactionForOtherRole.ts  TransactionForStudent.ts  TransactionNotes.ts  TransactionResult.ts  User.ts
